Refactor and fix task manager module
Task manager is now refactored into more manageable chunks and its
module tests pass. (This is a work still in progress.)

State of multi-node tasks is now correctly reported (MID-6783).